fix window picker caption visibility on Pop Shell
fix #92

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -527,6 +527,7 @@
     border-radius: 0;
     border: 0;
     padding: 0;
+    font-size: 0;
 }
 
 .just-perfection-api-workspace-background-radius-size0 .workspace-background { border-radius: 0; }
